# declavatar

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.MIT.txt  README.md  cbindgen.toml
.github/workflows/: build-x64-macos.yml  check-rust-codes.yml
avatar-validator/: Cargo.toml
avatar-validator/src/: cli.rs  main.rs
declavac/: Cargo.toml  build.rs
declavac/src/: ffi_function.rs  interop.rs  lib.rs  serialization.rs  state.rs  util.rs
declavalidate/: Cargo.toml
declavalidate/src/: application.rs  main.rs
declavatar/: Cargo.toml
declavatar-derive/: Cargo.toml
declavatar-derive/src/: lib.rs
declavatar-extra/sexpr/: dax.ket
declavatar/i18n/: log.en-us.json  log.ja-jp.json
declavatar/src/: arbittach.rs  avatar.rs  avatar_v2.rs  capi.rs  compiler.rs  decl.rs  decl_sexpr.rs  decl_v2.rs  i18n.rs  lib.rs  log.rs  testing.rs
declavatar/src/arbittach/: data.rs  error.rs  schema.rs  validator.rs
declavatar/src/avatar/: compiler.rs  data.rs  error.rs  mod.rs  transformer.rs
declavatar/src/avatar/compiler/: animations.rs  assets.rs  drivers.rs  menu.rs  mod.rs  parameters.rs
declavatar/src/avatar/transformer/: animations.rs  assets.rs  avatar.rs  dependencies.rs  drivers.rs  menu.rs  parameters.rs
declavatar/src/avatar_v2/: data.rs  log.rs  logger.rs  logging.rs  transformer.rs
declavatar/src/avatar_v2/data/: asset.rs  attachment.rs  avatar.rs  driver.rs  export.rs  layer.rs  menu.rs  parameter.rs
declavatar/src/avatar_v2/transformer/: asset.rs  attachment.rs  avatar.rs  controller.rs  driver.rs  export.rs  layer.rs  menu.rs  parameter.rs
declavatar/src/capi/: interface.rs  interop.rs  mod.rs  state.rs
declavatar/src/decl/: animations.rs  compiler.rs  data.rs  error.rs  mod.rs
declavatar/src/decl/compiler/: animations.rs  assets.rs  document.rs  drivers.rs  menu.rs  mod.rs  parameters.rs
declavatar/src/decl_sexpr/: data.rs  error.rs  function.rs
declavatar/src/decl_sexpr/data/: avatar.rs  controller.rs  driver.rs  layer.rs  menu.rs
declavatar/src/decl_sexpr/function/: asset.rs  assets.rs  avatar.rs  controller.rs  driver.rs  layer.rs  menu.rs  parameter.rs  parameters.rs
declavatar/src/decl_v2/: data.rs  error.rs  sexpr.rs
declavatar/src/decl_v2/data/: arbittach.rs  asset.rs  attachment.rs  avatar.rs  controller.rs  driver.rs  export.rs  layer.rs  menu.rs  parameter.rs
declavatar/src/decl_v2/sexpr/: argument.rs  asset.rs  avatar.rs  controller.rs  da.rs  da3.rs  dain.rs  driver.rs  error.rs  layer.rs  menu.rs  parameter.rs
declavatar/src/decl_v2/sexpr/da/: arguments.rs  asset.rs  avatar.rs  controller.rs  driver.rs  export.rs  layer.rs  layer_basic.rs  layer_raw.rs  menu.rs  parameter.rs  preprocess.rs
declavatar/src/decl_v2/sexpr/da3/: attachment.rs  value.rs
declavatar/src/decl_v2/sexpr/dain/: option.rs
declavatar/tests/: sexpr_example.rs
docs/: avatar-file.md  example.kdl  index.ja.md
docs/ja/: avatar-animations.md  avatar-file.md  avatar-index.md  avatar-parameters.md  semantics.md  usage.md
examples/: all-features.kdl  localized-keys.kdl  raw-layer.kdl  semantics.kdl  sexpr-all.decl.lisp  sexpr-basic.decl.lisp  sexpr-cancel.decl.lisp  sexpr-unified.decl.lisp
examples/arbittach/: game-object.json
examples/legacy-kdl/: cancel.kdl  raw-layer.kdl
examples/lua/: lua-all.decl.lua
examples/sexpr/: arbittach.declisp  basic.decl.lisp  basic.declisp  cancel.decl.lisp  cancel.declisp  copy-group.declisp  dax.decl.lisp  dax.declisp  defaults.decl.lisp  defaults.declisp  drive-parameter.decl.lisp  drive-parameter.declisp  extra-parameters.declisp  flatten.declisp  gate.declisp  material-property.declisp  menu.decl.lisp  menu.declisp  raw-layer.decl.lisp  raw-layer.declisp  sexpr-all.decl.lisp  sexpr-cancel.decl.lisp  sexpr-on.decl.lisp  symbol.declisp  tracking.declisp  universal-animation.declisp
extensions/sexpr/: dax.ket  lm.ket
ffi/: declavatar.h  example.c
misc/: declavatar.h
src/: compiler.rs  lib.rs  main.rs
src/avatar/: compiler.rs  data.rs  diagnostic.rs  error.rs  mod.rs
src/decl/: animation.rs  animations.rs  avatar.rs  document.rs  driver.rs  drivers.rs  entry.rs  error.rs  menu.rs  mod.rs  parameters.rs
unity-editor-plugin/: Declavatar.cs  DeclavatarData.cs  DeclavatarEditor.asmdef  DeclavatarImporter.cs  DeclavatarPlugin.cs  DeclavatarWindow.cs
unity-editor-plugin/Core/: DataTypes.cs  DeclarationImporter.cs  DeclavatarException.cs  ExternalAsset.cs  GenerateByDeclavatar.cs  KusakaFactory.Declavatar.Core.asmdef  NonDestructiveDeclavatar.cs  Plugin.cs
unity-editor-plugin/Editor/: ExternalAssetInspector.cs  GenerateByDeclavatarInspector.cs  KusakaFactory.Declavatar.Editor.asmdef  Utility.cs
