[workspace]
resolver = "2"
members = ["declavatar", "declavalidate"]

[workspace.dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
either = "1.9.0"
ketos = { version = "0.12.0", features = ["derive"] }
once_cell = "1.19.0"
pretty_assertions = "1.4.0"
rpds = "1.1.0"
rstest = "0.18.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
static_vcruntime = { version = "2.0.0" }
thiserror = "1.0.50"

declavatar = { path = "./declavatar" }

[profile.release]
lto = "fat"
strip = "debuginfo"
