[workspace.package]
version = "0.26.0"
edition = "2021"
authors = ["kb10uy <kb10uy@kb10uy.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kb10uy/declavatar"


[workspace]
resolver = "2"
members = ["declavatar", "declavatar-derive", "declavalidate"]

[workspace.dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
either = "1.9.0"
ketos = { version = "0.12.0", features = ["derive"] }
once_cell = "1.19.0"
pretty_assertions = "1.4.0"
proc-macro2 = "1.0.71"
quote = "1.0.33"
rpds = "1.1.0"
rstest = "0.18.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
static_vcruntime = { version = "2.0.0" }
strfmt = { version = "0.2.4" }
syn = "2.0.43"
sys-locale = "0.3.1"
thiserror = "1.0.50"

declavatar = { path = "./declavatar" }
declavatar-derive = { path = "./declavatar-derive" }

[profile.release]
lto = "fat"
strip = "debuginfo"
