[workspace.package]
version = "0.36.0"
edition = "2021"
authors = ["kb10uy <kb10uy@kb10uy.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kb10uy/declavatar"

[workspace]
resolver = "2"
members = ["declavatar", "declavatar-derive", "declavac", "declavalidate"]

[workspace.dependencies]
anyhow = "1.0.86"
cbindgen = "0.26.0"
clap = { version = "4.5.9", features = ["derive"] }
csbindgen = "1.9.2"
either = "1.13.0"
ketos = { version = "0.12.0", features = ["derive"] }
once_cell = "1.19.0"
pretty_assertions = "1.4.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
rpds = "1.1.0"
rstest = "0.21.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
static_vcruntime = { version = "2.0.0" }
strfmt = { version = "0.2.4" }
syn = "2.0.71"
sys-locale = "0.3.1"
thiserror = "1.0.62"

declavatar = { path = "./declavatar" }
declavatar-derive = { path = "./declavatar-derive" }

[profile.release]
lto = "fat"
strip = "debuginfo"
