[package]
name = "avatar-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
declavatar = { path = "../declavatar" }
miette = { version = "5.7.0", features = ["fancy"] }
serde_json = "1.0.95"

[build-dependencies]
static_vcruntime = { version = "2.0.0" }
