[package]
name = "avatar-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
declavatar = { path = "../declavatar" }
miette = { version = "5.10.0", features = ["fancy"] }
serde_json = "1.0.108"

[build-dependencies]
static_vcruntime = { version = "2.0.0" }
