[package]
name = "declavalidate"
license = "MIT OR Apache-2.0"
version = "0.26.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
declavatar = { workspace = true }
serde_json = { workspace = true }
strfmt = { workspace = true }
sys-locale = { workspace = true }

[build-dependencies]
static_vcruntime = { workspace = true }
