[package]
name = "declavalidate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
declavatar = { workspace = true }
serde_json = { workspace = true }
strfmt = { workspace = true }
sys-locale = { workspace = true }

[build-dependencies]
static_vcruntime = { workspace = true }
