[package]
name = "declavatar"
version = "0.20.0"
edition = "2021"

[features]
cdylib = []

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
either = { workspace = true }
ketos = { workspace = true }
rpds = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
static_vcruntime = { workspace = true }
