[package]
name = "declavatar"
version = "0.24.0"
edition = "2021"

[features]
cdylib = []

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
either = { workspace = true }
ketos = { workspace = true }
rpds = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

declavatar-derive = { workspace = true }

[dev-dependencies]
once_cell = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }

[build-dependencies]
static_vcruntime = { workspace = true }
