[package]
name = "declavatar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
either = { workspace = true }
ketos = { workspace = true }
rpds = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

declavatar-derive = { workspace = true }

[dev-dependencies]
once_cell = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }

[build-dependencies]
static_vcruntime = { workspace = true }
